--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Shopping for Men & Women Clothing, Accessories at The Show Stopper</title>
-    <link rel="stylesheet" href="nav.css">
+    <link rel="stylesheet" href="index.css">
     <script src="https://kit.fontawesome.com/0244637c96.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
@@ -174,7 +174,7 @@
         </div>
 
         <div>
-            <img src="https://prod-img.thesouledstore.com/public/theSoul/storage/mobile-cms-media-prod/product-images/WebsiteTiles_Big_Women-version6.jpg?format=webp&w=480&dpr=1.3" alt="">
+            <a href="tops.html"><img src="https://prod-img.thesouledstore.com/public/theSoul/storage/mobile-cms-media-prod/product-images/WebsiteTiles_Big_Women-version6.jpg?format=webp&w=480&dpr=1.3" alt=""></a>
         </div>
 
         <div>
@@ -314,14 +314,123 @@
 
 
     <footer>
+        <div id="foot">
+            <div>
+                <h4>NEED HELP</h4>
+                <br>
+                <p>Contact Us</p>
+                <p>Track Order</p>
+                <p>Returns & Refunds</p>
+                <p>FAQs</p>
+                <p>MY Account</p>
+            </div>
+            <div>
+                <h4>COMPANY</h4>
+                <br>
+                <p>About Us</p>
+                <p>Careers</p>
+                <p>Stores Near Me</p>
+                <p>From the SS</p>
+                <p>SS Army</p>
+            </div>
+            <div>
+                <h4>MORE INFO</h4>
+                <br>
+                <p>T&C</p>
+                <p>Privacy Policy</p>
+                <p>Sitemap</p>
+            </div>
+            <div>
+                <p>💰 COD Available</p>
+                <p>🔄️ 30 Days Easy Returns</p>
+            </div>
+        </div>
+        <br>
 
+        <div>
+            <h5>📱 EXPERIENCE THE SHOW STOPPER APP</h5>
+            <br>
+            <div id="social">
+                <div>
+                    <img src="https://tss-static-images.gumlet.io/icons/play-store.png" alt="">
+                </div>
+                <div>
+                    <img src="https://tss-static-images.gumlet.io/icons/app-store.png" alt="">
+                </div>
+            </div>
+        </div>
+        <br>
+        <div id="follow">
+            <div>
+                <img src="icons8-facebook-48.png" alt="">
+            </div>
+            <div>
+                <img src="icons8-instagram-48.png" alt="">
+            </div>
+            <div>
+                <img src="icons8-snapchat-48.png" alt="">
+            </div>
+            <div>
+                <img src="icons8-twitter-circled-48.png" alt="">
+            </div>
+            <div>Follow Us:</div>
+        </div>
+        <br>
+        <!-- Acoordian -->
+        <button style="border: 1px solid rgb(119, 119, 119);" class="accordion">NAVIGATION LINKS</button>
+        <div class="panel">
+            <br>
+            <p class="red">KIDS</p>
+            <p>Boys | Girls | Winterwear Collection |</p>
+            <br>
+            <p class="red">MEN</p>
+            <p>T-Shirts | Oversized T-Shirts | Shirts | Polos | Drop-Cut T-Shirts | Co-ord Sets | Oversized Full Sleeve T-Shirts |Full Sleeve T-Shirts | Hoodies & JacketsSweatshirts & SweatersJeansCotton |  Pants | Cargos | Joggers | Shorts | Innerwear & Boxers | Pajamas | Shoes | Perfumes | Pendants | Socks | Backpacks | New Arrivals | Best Sellers | Superheroes | Footwear | Hottest Deals | Supima | Activewear | Tie-DyeStreetwear |</p>
+            <br>
+            <p class="red">WOMEN</p>
+            <p>Women's T-Shirts | Tops | Co-ord Sets | Summer Shirts | Boyfriend T-shirts | Lounge Bralettes | Dresses | Sweatshirts & SweatersHoodies & JacketsCargos & Joggers | Shorts | Innerwear | Freestyle Leggings | All Day Pants | Pajamas | Shoes | Backpacks | Perfumes | Socks | New Arrivals | Best Sellers | Activewear | Hottest Deals |</p>
+            <br>
+            <p class="red">SHOP BY THEMES</p>
+            <p>TSS Originals | Solids |</p>
+            <p>All Superheroes | Captain America™ | X-Men™ | Marvel™ | Spider-Man™ | Black Panther™ | Iron Man™ | Captain Marvel™ | Punisher™ | Doctor Strange |DC Comics™ | Batman™ | Superman™ | Wonder Woman™ | The Flash™ | Hulk™ | Thor™ | Joker™ | Deadpool™ | Black Adam | All Movies & TV Shows | Naruto | Harry Potter™ | Money Heist | Stranger Things | F.R.I.E.N.D.S™ | Kung Fu Panda | The Simpsons | Disney™ | Fantastic Beasts | Star Wars | The Office | Brooklyn Nine-NineArchie Comics |</p>
+            <p>All Cartoons | Popeye | Looney Tunes™ | MinionsPeanuts™ | The Powerpuff Girls™ | GarfieldTom and Jerry | Courage The Cowardly Dog™ | Scooby Doo™ | Rick and Morty™ | Dexter's Laboratory™ | SpongeBob SquarePants™ | We Bare Bears | Johnny Bravo™ | The Flintstones | Chennai Super Kings | Liverpool FC | Arsenal FC | Lucknow Super Giants | Kolkata Knight Riders | Rajasthan RoyalsRevenant | Team Vitality | PSG | Manchester City | Patterns | Girl Power | Funny | Food | Animals | Quotes | ISRO | BGMI | Hardik Pandya | Sara Ali Khan |</p>
+            <br>
+            <p class="red">GET EXTRA DISCOUNTS WITH MEMBETSHIP</p>
+            <br>
+            <p class="red">MY MEMBERSHIP</p>
+        </div>
 
+        <button style="border: 1px solid rgb(104, 104, 104);border-top: none;" class="accordion">WHO WE ARE</button>
+        <div class="panel">
+            <br>
+            <p>The Souled Store was born out of the simple idea of loving what you do - following your soul – and, of course, our love for puns (sold/ souled). Our philosophy is just as simple- life is short, don’t spend it doing something you don’t like. From our products to our website, from our office culture to the way we interact with our customers, this philosophy’s a part of everything we do.</p>
+            <br>
+            <p>In June 2013, The Souled Store was founded by four people, with just a cupboard full of t-shirts (probably as big as yours). Although we’ve grown from cupboards to warehouses, a lot of things have remained the same. Our core values are now shared not by just four people, but by a team that’s now grown to over a hundred people.</p>
+            <br>
+            <p>The Neighbourhood Store Vibe
+                We aspire to be your favourite, friendly neighbourhood store. We curate all your favourite designs and make them available on various products ranging from t-shirts, bags, and badges to phone covers, stickers, notebooks, and more. We’re always enthusiastic and kicked about interacting with everyone- whether it’s handling queries over email and social media or interacting with our fans at various events, workshops, and stalls. Why? Because we care. A recent study by our in-house, prize-winning, and totally unbiased researchers showed that visiting www.thesouledstore.com causes excessive happiness, and could increase your lifespan by up to 7.5%.</p>
+        </div>
+        <!-- Acoordian -->
+
+        <div id="app">
+
+            <div style="display: flex;align-items: center;">
+                <p>100% Secure Payment : </p>
+                <img src="https://www.thesouledstore.com/static/img/payments-icon.e77ef49.png" alt="">
+            </div>
+            <div id="ship" style="display: flex;align-items: center;">
+                <p>Shipping Partners: </p>
+                <img src="https://tss-static-images.gumlet.io/icons/fedex.png" alt="">
+                <img src="https://tss-static-images.gumlet.io/icons/dtdc.png" alt="">
+                <img src="https://tss-static-images.gumlet.io/icons/delivery.png" alt="">
+                <img src="https://prod-img.thesouledstore.com/public/theSoul/images/icons/ECOM-Express.png?format=webp&w=128&dpr=1.3" alt="">
+                <img src="https://prod-img.thesouledstore.com/public/theSoul/images/icons/XPRESSBEES.png?format=webp&w=128&dpr=1.3" alt="">
+            </div>
+        </div>
     </footer>
 
-    
 
 </body>
-    <script src="nav.js"></script>
+    <script src="index.js"></script>
     <script src="/path/to/flickity.pkgd.min.js"></script>
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
     <script>
