--- a/frontend/index.html
+++ b/frontend/index.html
@@ -103,7 +103,7 @@
                 </div>
                 <a href="./login_register.html"><i class="fa-solid fa-user fa-lg"></i></a>
                 <a href=""><i class="fa-regular fa-heart fa-lg"></i></a>
-                <a href=""><i class="fa-solid fa-bag-shopping fa-lg"></i>
+                <!-- <a href="cart.html"><i class="fa-solid fa-bag-shopping fa-lg"></i> -->
                 </a>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
     
