--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,8 +17,8 @@
     <nav>
         <div class="anchi">
             <div class="anc1">
-                <a class="whi" href="">WOMEN</a>
-                <a class="w" href="">MEN</a>
+                <a class="whi" href="tops.html">WOMEN</a>
+                <a class="w" href="mens.html">MEN</a>
                 <a class="w" href="">KIDS</a>
             </div>
             <p class="navp">Download Our App & Get 10% Additional Cashbacks On all Orders</p>
